	  zipscript: new: rescan got some options - rescan <filename>, rescan "<filename*>", rescan --quick
	  zipscript: change: sitewho now uses the conf to find the gl version, or can auto-detect it.
	  zipscript: change: announce cookies changed.
	  bot: change: the bot use the new cookies.
	  zipscript: new: smart sfv checking - "bad" entries in a sfv will be ignored. "bad" files that was in the original sfv, if uploaded, will be allowed.
	  zipscript: new: rewrite/update the sfv if "bad" entries are found.
	  zipscript: new: allow sfv with a filename w/00000000 as crc - crc will be calced by the zipscript, and the crc written to the sfv.
	  zipscript: fix: the average bitrate for a full audio-release is used at the end of a race.
	  zipscript: new: the cleanup binary got a command line override for days back to cleanup
	  zipscript: new: tagline for each racer added to the (bot) output
	  zipscript: new: added support for execution of external script on banned releases.
	  zipscript: new: added support for speedtests
	  zipscript: new: if sfv_cleanup is set to true, the original sfv is copied to the storage dir (backup). Rescan will use the original sfv (re-copy it to the releasdir before performing a new cleanup).
	  zipscript: new: deny/allow mp3 releases based on vbr preset.
	  zipscript: new: config setting - audio_allowed_vbr_preset_check
	  zipscript: new: config setting - allowed_vbr_presets
	  zipscript: new: config setting - audio_vbr_preset_warn
	  zipscript: new: mark password protected rars as bad, even those embedded in zipfiles.
	  zipscript: new: config setting - test_for_password
	  zipscript: new: internal nfo extraction - will only extract one nfo (the real one) on the first zipfile uploaded.
	  zipscript: new: config setting - extract_nfo
	  zipscript: new: deny nfo upload in zip directories
	  zipscript: new: config setting - deny_nfo_upload_in_zip

v1.00	: Initial release
